# Vevo_V2

./: GAM_Report_16521056117_20251219_074206.csv  Gamstartingtesting1.py  gamservices.py  gamtest2.py  geo_sent_li_ids_2025-12-20.csv  logging_config.yaml  main.py  pyproject.toml  retry_logic.py  rule_violations.csv  slack_msg_build.py  slack_notification.py  test.csv  utils.py
